k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aerovigil-api
  namespace: aerovigil
  labels:
    app: aerovigil-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: aerovigil-api
